# daoCLI-init

./: .gitignore  Anchor.toml  CLA.md  README.md  cli.ts  dao-cli-4.js  dao-cli-4.ts  dao-client.js  dao-client.ts  dao-config-solana.jsonnet  dao-config-starknet.jsonnet  dao-contract.rs  dao-detailed-system.mermaid  dao-starknet-client.ts  dao-starknet.txt  dao_config.json  dao_contract.cairo  dao_contract.rs  daocli-philosophy.md  known-issues.md  local-dev.sh  mcp.ts  package.json  pnpm-lock.yaml  tests.md  tests.ts  tsconfig.json  whitepaper-v1.md
cli/: .gitignore  dao-config.json  dao_contract.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
dao-contract/: Anchor.toml  README.md
docs/: integration-summary.md  todo.md
programs/bonding-curve/programs/bonding-curve/: Cargo.toml
programs/bonding-curve/programs/bonding-curve/src/: errors.rs  events.rs  lib.rs
programs/bonding-curve/programs/bonding-curve/src/instructions/: mod.rs
programs/bonding-curve/programs/bonding-curve/src/instructions/admin/: initialize.rs
programs/bonding-curve/programs/bonding-curve/src/instructions/curve/: create_bonding_curve.rs  migrate_liquidity.rs  mod.rs  swap.rs
programs/bonding-curve/programs/bonding-curve/src/state/: global.rs
programs/bonding-curve/programs/bonding-curve/src/state/curve/: bonding_curve.rs  dao_proposal.rs  locker.rs  mod.rs
programs/multisig-dao/: Cargo.toml
programs/multisig-dao/src/: args.rs  error.rs  lib.rs
programs/multisig-dao/src/instructions/: create_dao.rs  mod.rs
scripts/: local-dev.sh  update_devnet_keypair.js
src/: index.ts  (+1 more)
(+82 files in other folders)
