[package]
name = "bonding-curve"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonding_curve"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]

[dependencies]
bytemuck_derive = "=1.8.1"
anchor-lang = {version = "0.31.0", features = ["init-if-needed","event-cpi"]}
anchor-spl ={ version = "0.31.0", features = ["metadata"] }
